[package]
name = "util"
version = "0.1.59"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
anyhow = "1.0.57"
chrono = "0.4.19"
reqwest = { version = "0.11", features = ["json", "socks", "rustls-tls", "gzip"] }
tokio = { version = "1.17.0", features = [
    "full",
] }
tracing = "0.1.35"

serde = { version = "1.0.136", features = ["derive", "rc"] }
serde_json = "1.0"
toml = "0.5.9"

tokio-tungstenite = { version = "0.17.1", features = [
    "tokio-rustls",
    "rustls-tls-webpki-roots",
] }
futures-util = { version = "0.3.21", features = ["sink"] }
# websocket 支持
websocket = "0.24.0"
data-encoding = "2.3.2"
rust_decimal = "1.23"
rust_decimal_macros = "1.23"

crossbeam = "0.8.1"
crossbeam-channel = "0.5"

# 加密支持
aes = "0.7.4"
block-modes = "0.8.1"
block-padding = "0.2.1"
parking_lot = "0.12.1"


sysinfo = "0.29"
once_cell = "1.19.0"
time = "0.1.45"
humantime = "2.1.0"
urlencoding = "2.1.3"

[dependencies.openssl]
version = "0.10.55"
optional = true


[dependencies.teloxide]
version = "0.11.0"
features = ["macros", "auto-send", "rustls", "ctrlc_handler"]
optional = true



[features]

notify = [
    "teloxide"
]

